@@ -23,7 +23,8 @@
     <spring.osgi.export>!*</spring.osgi.export>
     
   	<spring.osgi.private.pkg>
-		org.springframework.osgi.web.extender.internal*
+		org.springframework.osgi.web.extender.internal*,
+		org.springframework.osgi.extender.internal.util*
 	</spring.osgi.private.pkg>
 
 	<spring.osgi.import.pkg>
@@ -46,6 +47,14 @@
       <artifactId>spring-osgi-web</artifactId>
       <version>${project.parent.version}</version>
     </dependency>
+    <!-- used for getting Counter util in -->
+    <dependency>
+      <groupId>org.springframework.osgi</groupId>
+      <artifactId>spring-osgi-extender</artifactId>
+      <version>${project.parent.version}</version>
+	  <optional>true</optional>
+    </dependency>
+    
 
    <dependency>
       <groupId>org.springframework.osgi</groupId>
